syntax = "proto3";

option go_package = "./book";

message BookUploader {
    string user_id = 1;
    string user = 2;
}